# pokerstars-tempest-bot

./: .gitignore  README.md  poker.db  poker.sqbpro  pyproject.toml  requirements.txt
src/: _config.py  _types.py  card.py  config.py  database.py  game.py  generator.py  holdem_argparser.py  holdem_calc.py  holdem_functions.py  main.py  montecarlo.py  play.py  player.py  poker_hand.py  push_fold.py  simulate.py  simulator.py  treys_model.py  vision.py
src/configs/: pokerstars.py  wsop.py
src/models/edge/: README.md
src/models/montecarlo/: README.md  holdem_argparser.py  holdem_calc.py  holdem_functions.py
src/models/nash/: README.md
src/models/treys/: README.md  treys_eval.py
